Update docs for the run-report layout, load profiles and today's gotchas
The report-output docs described a layout that no longer exists: timestamped
files in the reports/ root. Runs now write a self-contained
reports/<run_id>/ directory, and AggregateReport/SummaryReport land inside it
rather than being orphaned at the root.

Documents what was previously undocumented:

- run_report.md / run_summary.json, generated automatically after every run
- the load-profile workflow, including the settings it needs
  (RECYCLE_ON_EOF=true, MAX_CONCURRANCY above peak_qps x latency, HOLD_PERIOD
  covering profile duration plus drain) and how to confirm it was applied
- that prompts accept a filename as well as a number, and why filenames are the
  right choice when scripting
- GENERATE_DASHBOARD, which the docs already promised but nothing implemented

Adds troubleshooting entries for the three failures that cost the most time:
load profile silently not applied, Databricks ExceptionInInitializerError from
Arrow on Java 9+, and UNIMPLEMENTED/no-cluster-name from duplicate driver jars.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>